--- a/styles/stylesweek5.css
+++ b/styles/stylesweek5.css
@@ -11,12 +11,12 @@ body {
     text-align: center;
     background-color: rgb(185, 185, 185);
     padding: 10px;
-    border: 1px solid;
+    /* border: 1px solid; */
 }
 .center {
     display: flex;    
     /* border: 1px solid red; */
-    background-color: rgb(243, 231, 172);
+    background-color: rgb(252, 244, 204);
 
 }
 .osnova {
@@ -27,38 +27,35 @@ body {
     width: 1000px;
 }
 
-.Eche
-{
-    /* background-color: rgb(249, 197, 52); */
-    border: 1px solid;
-}
-
 .vmeste {
     display: inline-block;
-    background-color: rgb(240, 160, 86);
+    background-color: rgb(235, 178, 125);
+    padding: 15px;
+    margin: 10px;
 }
 .Eche1 {
     display: inline-block;
-    background-color: rgb(249, 197, 52);
+    background-color: rgb(255, 242, 205);
     padding: 10px;
-    border: 1px solid;
+    /* border: 1px solid; */
 }
 
 .bok {
     display: inline-block;
     text-align: center;
     width: 900px;
-    background-color: rgb(203, 254, 193);
-    border: 1px solid;  
+    background-color: rgb(215, 235, 211);
+    /* border: 1px solid;   */
 }
 
 .footer {
+    display: flex;
+    justify-content: space-around;
     background-color: rgb(185, 185, 185);
-    text-align: center;
-    border: 1px solid;
+    /* border: 1px solid; */
 }
 .items {
-    display: inline-block;
     background-color:rgb(255, 255, 255);
     padding: 15px;
+    margin: 10px;
 }
